add about people say

--- a/about.html
+++ b/about.html
@@ -32,14 +32,51 @@
                 </div>
             </div>
         </nav>
-
-        <section class="container-fluid">
-            <h1>About</h1>
-        </section>
-
     </header>
 
-    <main></main>
+    <main>
+        <section class="container-fluid">
+            <div class="row">
+                <div class="col-12">
+                    <h2 class="text-center">Контакти</h2>
+                </div>
+            </div>
+        </section>
+
+        <section class="container mb-3">
+            <div class="row my-2 my-lg-4">
+                <div class="col-12">
+                    <h2 class="text-center mb-4">Що люди говорять про нас</h2>
+                </div>
+            </div>
+            <div class="row justify-content-between mb-3">
+                <div class="col-12 col-md-5">
+                    <blockquote class="mb-3">
+                        I am an ambitious workaholic, but apart from that, pretty simple person. Understanding who you are and what you want is my strategy for your brand. I am always figuring out ways to capture your vision, so people can get on board.
+                    </blockquote>
+                    <h4 class="mb-0">— Sara Anderson</h4>
+                    <span>Постійний клієнт</span>
+                </div>
+                <div class="col-12 col-md-5">
+                    <img src="img/about_img1.jpg" alt="">
+                </div>
+            </div>
+
+            <div class="row justify-content-between mb-3">
+                <div class="col-12 col-md-5">
+                    <blockquote class="mb-3">
+                        I am an ambitious workaholic, but apart from that, pretty simple person. Understanding who you are and what you want is my strategy for your brand. I am always figuring out ways to capture your vision, so people can get on board.
+                    </blockquote>
+                    <h4 class="mb-0">— Daniel Ramirez</h4>
+                    <span>Постійний клієнт</span>
+                </div>
+                <div class="col-12 col-md-5">
+                    <img src="img/about_img2.jpg" alt="">
+                </div>
+            </div>
+
+        </section>
+    </main>
 
     <footer class="container-fluid text-white bg-dark py-4">
         <div class="row justify-content-center">
@@ -86,18 +123,18 @@
             <hr>
         </div>
 
-        <div class="row justify-content-center">
-            <div class="col-10 col-sm-5 col-md-3 col-xl-2">
-                <p class="text-center">CATEGORIES</p>
+        <div class="row justify-content-center row-links my-2 my-md-3">
+            <div class="col-10 col-sm-5 col-md-3 col-xl-2 mb-2 mb-md-0">
+                <a class="text-center links" href="index.html">Головна</a>
+            </div>
+            <div class="col-10 col-sm-5 col-md-3 col-xl-2 mb-2 mb-md-0">
+                <a class="text-center links" href="about.html">Про нас</a>
+            </div>
+            <div class="col-10 col-sm-5 col-md-3 col-xl-2 mb-2 mb-md-0">
+                <a class="text-center links" href="#">TOP LINK</a>
             </div>
             <div class="col-10 col-sm-5 col-md-3 col-xl-2">
-                <p class="text-center">CUSTOMER SUPPORT</p>
-            </div>
-            <div class="col-10 col-sm-5 col-md-3 col-xl-2">
-                <p class="text-center">TOP LINK</p>
-            </div>
-            <div class="col-10 col-sm-5 col-md-3 col-xl-2">
-                <p class="text-center">USEFUL LINKS</p>
+                <a class="text-center links" href="#">USEFUL LINKS</a>
             </div>
         </div>
 
@@ -107,7 +144,7 @@
 
         <div class="row mt-2">
             <div class="col-12">
-                <p class="text-center">2018 All right reserved.</p>
+                <p class="text-center">2021 Всі права застережено.</p>
             </div>
         </div>
     </footer>
