--- a/index.html
+++ b/index.html
@@ -103,18 +103,18 @@
             <hr>
         </div>
 
-        <div class="row justify-content-center">
-            <div class="col-10 col-sm-5 col-md-3 col-xl-2">
-                <p class="text-center">CATEGORIES</p>
+        <div class="row justify-content-center row-links my-2 my-md-3">
+            <div class="col-10 col-sm-5 col-md-3 col-xl-2 mb-2 mb-md-0">
+                <a class="text-center links" href="index.html">Головна</a>
+            </div>
+            <div class="col-10 col-sm-5 col-md-3 col-xl-2 mb-2 mb-md-0">
+                <a class="text-center links" href="about.html">Про нас</a>
+            </div>
+            <div class="col-10 col-sm-5 col-md-3 col-xl-2 mb-2 mb-md-0">
+                <a class="text-center links" href="#">TOP LINK</a>
             </div>
             <div class="col-10 col-sm-5 col-md-3 col-xl-2">
-                <p class="text-center">CUSTOMER SUPPORT</p>
-            </div>
-            <div class="col-10 col-sm-5 col-md-3 col-xl-2">
-                <p class="text-center">TOP LINK</p>
-            </div>
-            <div class="col-10 col-sm-5 col-md-3 col-xl-2">
-                <p class="text-center">USEFUL LINKS</p>
+                <a class="text-center links" href="#">USEFUL LINKS</a>
             </div>
         </div>
 
@@ -124,7 +124,7 @@
 
         <div class="row mt-2">
             <div class="col-12">
-                <p class="text-center">2018 All right reserved.</p>
+                <p class="text-center">2021 Всі права застережено.</p>
             </div>
         </div>
     </footer>
