--- a/about.html
+++ b/about.html
@@ -41,6 +41,20 @@
                     <h2 class="text-center">Контакти</h2>
                 </div>
             </div>
+
+            <div class="row">
+                <div class="col-12">
+                    <h2 class="text-center">Емейл: example@example.com</h2>
+                    <h4 class="text-center"><a href="mailto:example@example.com">Емейл: example@example.com</a></h4>
+                </div>
+            </div>
+
+            <div class="row">
+                <div class="col-12">
+                    <h2 class="text-center">Telephone: +380 95 234 1234</h2>
+                    <h4 class="text-center"><a href="tel:+380 95 234 1234">+380 95 234 1234</a></h4>
+                </div>
+            </div>
         </section>
 
         <section class="container mb-3">
@@ -49,29 +63,40 @@
                     <h2 class="text-center mb-4">Що люди говорять про нас</h2>
                 </div>
             </div>
+
             <div class="row justify-content-between mb-3">
                 <div class="col-12 col-md-5">
                     <blockquote class="mb-3">
-                        I am an ambitious workaholic, but apart from that, pretty simple person. Understanding who you are and what you want is my strategy for your brand. I am always figuring out ways to capture your vision, so people can get on board.
+                        <h5 class="fw-light lh-lg"><em>
+                            I am an ambitious workaholic, but apart from that, pretty simple person. Understanding who you are and what you want is my strategy for your brand. I am always figuring out ways to capture your vision, so people can get on board.
+                        </em></h5>
                     </blockquote>
                     <h4 class="mb-0">— Sara Anderson</h4>
                     <span>Постійний клієнт</span>
                 </div>
                 <div class="col-12 col-md-5">
-                    <img src="img/about_img1.jpg" alt="">
+                    <img class="img-fluid" src="img/about_img1.jpg" alt="">
+                </div>
+            </div>
+
+            <div class="row">
+                <div class="col-12">
+                    <hr class="my-4">
                 </div>
             </div>
 
             <div class="row justify-content-between mb-3">
                 <div class="col-12 col-md-5">
+                    <img class="img-fluid" src="img/about_img2.jpg" alt="">
+                </div>
+                <div class="col-12 col-md-5">
                     <blockquote class="mb-3">
-                        I am an ambitious workaholic, but apart from that, pretty simple person. Understanding who you are and what you want is my strategy for your brand. I am always figuring out ways to capture your vision, so people can get on board.
+                        <h5 class="fw-light lh-lg"><em>
+                            I am an ambitious workaholic, but apart from that, pretty simple person. Understanding who you are and what you want is my strategy for your brand. I am always figuring out ways to capture your vision, so people can get on board.
+                        </em></h5>
                     </blockquote>
                     <h4 class="mb-0">— Daniel Ramirez</h4>
                     <span>Постійний клієнт</span>
-                </div>
-                <div class="col-12 col-md-5">
-                    <img src="img/about_img2.jpg" alt="">
                 </div>
             </div>
 
